tried to add bg img but failed

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,13 @@
-.body{
-    margin-left: center;
-}
+/* .body{
+    margin-left: center
+};
+ */
+
+ body {
+     background-image:url("download.jpg") ;
+     background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center center;
+    background-size: cover
+ }
+ 
